<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"

    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="144dp"
        style="@style/logo"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ID"
        android:textSize="17sp"
        android:layout_width="330dp"
        android:layout_height="50dp"
        style="@style/editText"
        android:layout_marginTop="140dp"
        android:gravity="center|left"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="45dp"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo"
        />

    <EditText
        android:textSize="17sp"
        android:id="@+id/password"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="53dp"
        style="@style/editText"
        android:gravity="center|left"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="50dp"
        android:text="@string/pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ID"
        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/login"
        android:textSize="17sp"
        style="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView

        android:id="@+id/text"
        android:textSize="14sp"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/or"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        style="@style/TEXT"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:textSize="17sp"
        android:id="@+id/QR_login"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="50dp"
        android:text="@string/QR"

        style="@style/button"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <TextView
        android:textSize="17sp"
        android:id="@+id/outo_login"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:text="@string/auto"
        style="@style/TEXT"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/QR_login"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>